Updated Validation for Future Gui and Testing Coverage